<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="54dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="@string/naslov"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextText9"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextText10"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/fullname" />

            <EditText
                android:id="@+id/editTextText11"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/country" />

            <EditText
                android:id="@+id/editTextText12"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editTextText13"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/phone" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="94dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="132dp"
                    android:layout_height="63dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="149dp"
                    android:layout_height="63dp"
                    android:text="@string/female" />

            </RadioGroup>

            <EditText
                android:id="@+id/editTextText14"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/pass" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="302dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/check" />

            <Button
                android:id="@+id/button"
                android:layout_width="390dp"
                android:layout_height="52dp"
                android:text="@string/gumb" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>